--- a/public/pair.html
+++ b/public/pair.html
@@ -46,7 +46,7 @@
 <body>
   <div class="container">
     <h1>Vinnie Pairing Code Generator</h1>
-    <input type="text" id="number" placeholder="Enter your WhatsApp number" />
+    <input type="text" id="number" placeholder="Enter your WhatsApp number international format without +" />
     <button onclick="generateCode()">Generate Code</button>
     <pre id="output"></pre>
   </div>
